--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -3,5 +3,18 @@
 {% block title %}Hello EntrepriseController!{% endblock %}
 
 {% block body %}
-    <h1>liste des entreprises</h1>
+
+    <h1>liste des entreprises</h1>    
+
+               <a class="btn btn-primary" href="{{ path( 'add_entreprise') }}" >Ajouter une entreprise</a><br>
+ 
+ 
+        {% for entreprise in entreprises %}
+
+               <a href="{{ path( 'show_entreprise', {'id: entreprise.id}) }}" >{{ entreprise }}</a><br>
+
+        {% endfor %}
+
+        {{ bidule }}
+
 {% endblock %}
