--- a/templates/employe/index.html.twig
+++ b/templates/employe/index.html.twig
@@ -5,11 +5,17 @@
 {% block body %}
 
 {{ dump(employes)}}
+
     <h1>Lie des employés</h1>
 
-            {% for employe in employes %}
+    <a class="btn btn-primary" href="{{ path('add_employe') }}">   Ajouter un employé </a> <br>
+
+        {% for employe in employes %}
 
                 <a href="{{ path('show_employe', {'id' : employer.id }) }}">   {{ employe }} </a> <br>
+                <a class="btn-warning" btnhref="{{ path( 'edit_employe', {'id: employe.id}) }}" > Edit </a><br>
+                <a class="btn-danger" btnhref="{{ path( 'delete_employe', {'id: employe.id}) }}" > Delete </a><br>
+
 
         {% endfor %}
 
