--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,8 +16,8 @@
 
         <nav>
             <ul>
-                <li><a href="{{ path('app_entreprise ) }}  ">liste des entreprises</a></li>
-                <li><a href="{{ path('app_employee ) }}  ">liste des employés</a></li>
+                <li><a href="{{ path('app_entreprise' ) }}  ">liste des entreprises</a></li>
+                <li><a href="{{ path('app_employee' ) }}  ">liste des employés</a></li>
         </nav>
 
         {% block body %}{% endblock %}
